--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
         <header>
         <!-- Navigation of the website -->
             <nav>
-                <a href="" target="_blank"> <span class="Web-logo">Web</span>Studio</a>
+                <a href="/"> <span class="Web-logo">Web</span>Studio</a>
 
                 <ul>
-                    <li><a class="link " href="" target="_blank">Studio</a> </li>
-                    <li><a class="link" href="" target="_blank">Portfolio</a> </li>
-                    <li><a class="link" href="" target="_blank">Contacts</a> </li>
+                    <li><a class="link" href="">Studio</a> </li>
+                    <li><a class="link" href="">Portfolio</a> </li>
+                    <li><a class="link" href="">Contacts</a> </li>
                  </ul>
             </nav>
 
         <!-- Contact information -->
                  <ul>
-                    <li><a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a> </li>
-                    <li><a href="tel:++110001111111" target="_blank">+11 (000) 111-11-11</a></li>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                    <li><a href="tel:++110001111111">+11 (000) 111-11-11</a></li>
                  </ul>
 
         </header> 
@@ -90,7 +90,7 @@
 
         <!-- Footer of the website -->
         <footer>
-                <a href="" target="_blank"> <span class="Web-logo">Web</span>Studio</a>
+                <a href="/"> <span class="Web-logo">Web</span>Studio</a>
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
     </body>
