--- a/index.html
+++ b/index.html
@@ -1,98 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
-    <body>
-        <!-- Head of the website -->
-        <header>
-        <!-- Navigation of the website -->
-            <nav>
-                <a href="/"> <span class="Web-logo">Web</span>Studio</a>
+  </head>
+  <body>
+    <!-- Head of the website -->
+    <header>
+      <!-- Navigation of the website -->
+      <nav>
+        <a href="/"> <span class="Web-logo">Web</span>Studio</a>
 
-                <ul>
-                    <li><a class="link" href="">Studio</a> </li>
-                    <li><a class="link" href="">Portfolio</a> </li>
-                    <li><a class="link" href="">Contacts</a> </li>
-                 </ul>
-            </nav>
+        <ul>
+          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
+        </ul>
+      </nav>
 
-        <!-- Contact information -->
-                 <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                    <li><a href="tel:++110001111111">+11 (000) 111-11-11</a></li>
-                 </ul>
+      <!-- Contact information -->
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:++110001111111">+11 (000) 111-11-11</a></li>
+      </ul>
+    </header>
 
-        </header> 
+    <!-- Main of the website -->
+    <main>
+      <!-- Hero section -->
+      <section>
+        <h1>Effective Solutions <br />for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
 
-        <!-- Main of the website -->
-        <main>
+      <!-- Section 1 -->
+      <section>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-            <!-- Hero section -->
-            <section>
-                <h1>Effective Solutions <br>for Your Business</h1>
-                 <button type="button">Order Service</button>
-            </section>
+      <!-- Section 2  -->
+      <section>
+        <h2>Our Team</h2>
 
-            <!-- Section 1 -->
-             <section>
-                <ul>
-                    <li>
-                        <h2>Strategy</h2>
-                        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-                    </li>
-                    <li>
-                        <h2>Punctuality</h2>
-                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                    </li>
-                    <li>
-                        <h2>Diligence</h2>
-                        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                    </li>
-                    <li>
-                        <h2>Technologies</h2>
-                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                    </li>
-                </ul>
-             </section>
+        <ul>
+          <li>
+            <img
+              src="images/imgMarkGuerrero.jpg"
+              alt="Mark Guerrero profile photo"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="images/imgTomFord.jpg"
+              alt="Tom Ford profile photo"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="images/imgCamilaGarcia.jpg"
+              alt="Camila Garcia profile photo"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/imgDanielWilson.jpg"
+              alt="Daniel Wilson profile photo"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
-             <!-- Section 2  -->
-              <section>
-            <h2>Our Team</h2>
-            
-            <ul>
-                <li>
-                    <img src="images/imgMarkGuerrero.jpg" alt="Mark Guerrero profile photo" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="images/imgTomFord.jpg" alt="Tom Ford profile photo" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="images/imgCamilaGarcia.jpg" alt="Camila Garcia profile photo" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="images/imgDanielWilson.jpg" alt="Daniel Wilson profile photo" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-              </section>
-
-        </main>
-
-        <!-- Footer of the website -->
-        <footer>
-                <a href="/"> <span class="Web-logo">Web</span>Studio</a>
-                <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </footer>
-    </body>
-
+    <!-- Footer of the website -->
+    <footer>
+      <a href="/"> <span class="Web-logo">Web</span>Studio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
