--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <ul>
           <li>
             <img
-              src="images/imgMarkGuerrero.jpg"
+              src="images/img_mark-guerrero.jpg"
               alt="Mark Guerrero profile photo"
               width="264"
               height="260"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="images/imgTomFord.jpg"
+              src="images/img_tom-ford.jpg"
               alt="Tom Ford profile photo"
               width="264"
               height="260"
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img
-              src="images/imgCamilaGarcia.jpg"
+              src="images/img_camila-garcia.jpg"
               alt="Camila Garcia profile photo"
               width="264"
               height="260"
@@ -105,7 +105,7 @@
           </li>
           <li>
             <img
-              src="images/imgDanielWilson.jpg"
+              src="images/img_daniel-wilson.jpg"
               alt="Daniel Wilson profile photo"
               width="264"
               height="260"
