--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
       <section>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -80,7 +80,7 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
+            <p>Mark Guerrero</p>
             <p>Product Designer</p>
           </li>
           <li>
@@ -90,7 +90,7 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
+            <p>Tom Ford</p>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -100,7 +100,7 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <p>Camila Garcia</p>
             <p>Marketing</p>
           </li>
           <li>
@@ -110,7 +110,7 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <p>Daniel Wilson</p>
             <p>UI Designer</p>
           </li>
         </ul>
