--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <!-- Navigation of the website -->
       <nav>
-        <a href="/"> <span class="Web-logo">Web</span>Studio</a>
+        <a href="/">WebStudio</a>
 
         <ul>
           <li><a class="link" href="">Studio</a></li>
@@ -20,22 +20,25 @@
       </nav>
 
       <!-- Contact information -->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:++110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <!-- Main of the website -->
     <main>
       <!-- Hero section -->
       <section>
-        <h1>Effective Solutions <br />for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
       <!-- Section 1 -->
       <section>
+        <h2>Our Skills</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -75,42 +78,42 @@
         <ul>
           <li>
             <img
-              src="images/img_mark-guerrero.jpg"
+              src="./images/img_mark-guerrero.jpg"
               alt="Mark Guerrero profile photo"
               width="264"
               height="260"
             />
-            <p>Mark Guerrero</p>
+            <h3>Mark Guerrero</h3>  
             <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="images/img_tom-ford.jpg"
+              src="./images/img_tom-ford.jpg"
               alt="Tom Ford profile photo"
               width="264"
               height="260"
             />
-            <p>Tom Ford</p>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/img_camila-garcia.jpg"
+              src="./images/img_camila-garcia.jpg"
               alt="Camila Garcia profile photo"
               width="264"
               height="260"
             />
-            <p>Camila Garcia</p>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="images/img_daniel-wilson.jpg"
+              src="./images/img_daniel-wilson.jpg"
               alt="Daniel Wilson profile photo"
               width="264"
               height="260"
             />
-            <p>Daniel Wilson</p>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -119,7 +122,7 @@
 
     <!-- Footer of the website -->
     <footer>
-      <a href="/"> <span class="Web-logo">Web</span>Studio</a>
+      <a href="/">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
